--- a/components/homepage/Services.module.css
+++ b/components/homepage/Services.module.css
@@ -4,6 +4,7 @@
 .serviceBox {
     padding: 50px;
     flex: 1 450px;
+    cursor: pointer;
 }
 .serviceBox p {
     font-size: 1.2em;
@@ -25,7 +26,7 @@
     background: rgb(231, 231, 231);
 }
 .serviceBox h2 {
-    font-size: calc(30px + (42 - 30) * (100vw - 400px) / (1680 - 450));;
+    font-size: calc(24px + (36 - 24) * (100vw - 400px) / (1680 - 450));;
 }
 .serviceBox ul {
     list-style: none;
